--- a/Frequency_analysis_FFT.ipynb
+++ b/Frequency_analysis_FFT.ipynb
@@ -426,6 +426,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "* Normalization of Signal before DFT :\n",
+        "    *  To compare the signals fairly: we might analyse two signal with different loudness/volume , without normalization , one looks stronger just because of it louder\n",
+        "\n",
+        "* Log Power : \n",
+        "    * Becuase of Range of magnitude is huge and the log :\n",
+        "        * Compress the large difference\n",
+        "        * Make small component visible\n",
+        "        * Mimic human Perception of loudness (which is logarithamic)"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 45,
       "metadata": {
@@ -560,6 +574,25 @@
         "plt.show()\n",
         "print(\"Shape of signal:\", signal.shape)\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Mel Spectrum \n",
+        "\n",
+        "* X axis = Time window \n",
+        "* Z axis = Power/ Log power\n",
+        "* Y axis = Mel scale (non linear scale)\n",
+        "\n",
+        "* Mel scale maps real world frequency to how we preceive pitch\n",
+        "    * Humans hear:\n",
+        "        * Small changes in low frequencies very well (100 Hz to 200Hz)\n",
+        "        * But we are less sensitive towards high frequencies (6000Hz to 6100Hz)\n",
+        "\n",
+        "Mel(f) = 2595 * log(1 + f/700) , here log is of base 10\n",
+        "* Now the frequency bin becomes mel indices"
       ]
     }
   ],
