--- a/Frequency_analysis_FFT.ipynb
+++ b/Frequency_analysis_FFT.ipynb
@@ -16,9 +16,10 @@
         "id": "CauF_be7axQc"
       },
       "source": [
-        "### Short fourier transform - STFT\n",
+        " Short fourier transform - STFT\n",
         "\n",
         "* Fourier Transform only gives the frequency content or info in that signal , and it doesn't tell where that frequency is .\n",
+        "* STFT fixes this by spliting into windows\n",
         "* FT can be applied to a wide range of signals — including aperiodic and non-stationary signals\n",
         "    * FT is defined for any signal that is absolutely integrable or has finite energy\n",
         "    * This includes non-periodic and non-stationary signals ,As long as the signal is integrable\n",
